--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,23 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>App</title>
-  </head>
-  <body>
-    <ul class="people_list">
-      {{#each projects}}
-        <li>{{this.title}}</li>
-      {{/each}}
-    </ul>
-    <form action="/project/create" method="POST">
-      <input name="title" placeholder="Titre du projet" />
-      <input name="description" placeholder="Titre du projet" />
-      <input name="author" placeholder="Titre du projet" />
-      <input name="date" placeholder="Titre du projet" />
-      <input name="contributors" type="number" placeholder="Titre du projet" />
-      <input name="totalHours" type="number" placeholder="Titre du projet" />
-      <button type="submit">Créer</button>
-    </form>
-  </body>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8" />
+        <title>App</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link href="/css/tailwind.css" rel="stylesheet"/>
+        <link href="/css/style.css" rel="stylesheet"/>
+    </head>
+    <body class="bg-gray-900">
+        <img class="fixed select-none top-0 -z-1" src="/img/waves.svg" alt=""/>
+        <section class="text-center animation-rocket">
+            <h1 id="head-text" class="font-black py-4 mt-24 text-8xl text-white flex flex-col">
+                <span>Les meilleurs</span>
+                <span class="mt-10 z-10">abandons...</span>
+                <div id="rocket" class="w-screen flex justify-center">
+                    <img class="absolute transform -translate-y-56 z-0" src="/img/rocket.svg" alt=""/>
+                </div>
+            </h1>
+        </section>
+        <section id="projects" class="container px-4 mx-auto mt-64">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
+                {{#each projects}}
+                    <div class="bg-gradient-to-br from-blue-500 to-blue-700 p-8 rounded-md justify-between shadow-xl">
+                    <div>
+                        <div class="flex items-center font-bold text-white text-2xl">
+                            {{#if this.icon}}
+                                <img class="mr-6" src="{{ this.icon }}" />
+                            {{/if}}
+                            {{ this.title }}
+                        </div>
+                        <p class="text-md mt-3 text-white">{{ this.description }}</p>
+                    </div>
+                    <div class="flex justify-between mt-4">
+                        <div class="flex items-center text-white text-md font-regular">
+                            <img class="mr-2" src="/img/clock.svg" />
+                            {{ this.totalHours }}h
+                        </div>
+                        <div class="flex">
+                            {{#each this.contributors}}
+                                <img class="w-8 transform translate-x-2 rounded-full ml-1" src="{{ this.url }}" />
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+            <button onClick="window.location.reload()" class="block mx-auto bg-purple-700 transition ease-in-out duration-200 hover:bg-purple-500 transform hover:-translate-y-1 py-4 px-5 rounded-md text-white font-medium focus:outline-none">Voir d'autres projets</button>
+        </section>
+        <footer class="py-4 mt-4 text-white font-bold text-md text-center">
+            Made with ❤️ by <a href="https://en-zo.dev">Enzo</a> & <a href="https://briqueaubob.dev">Bob</a>
+        </footer>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+        <script src="/js/app.js"></script>
+    </body>
 </html>
