--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="utf-8" />
     <title>App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="/css/tailwind.css" rel="stylesheet"/>
+    <link href="/css/style.css" rel="stylesheet"/>
 </head>
-<body>
-<ul class="people_list">
-    {{#each projects}}
-        <li>{{this.title}}</li>
-    {{/each}}
-</ul>
-<form action="/project/create" method="POST">
-    <input name="title" placeholder="Titre du projet" />
-    <input name="description" placeholder="description du projet" />
-    <input name="author" placeholder="author du projet" />
-    <input name="date" placeholder="date du projet" />
-    <input name="contributors" type="number" placeholder="contributors du projet" />
-    <input name="totalHours" type="number" placeholder="totalHours du projet" />
-    <button type="submit">Créer</button>
-</form>
+<body class="bg-gray-900">
+    <img class="fixed select-none top-0 -z-1" src="/img/waves.svg" alt=""/>
+    <form action="/project/create" method="POST">
+        <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-8 mt-12 px-4">
+            <div class="mt-10 bg-gray-800 p-10 rounded-xl text-white shadow-2xl">
+                <h1 class="font-black text-xl text-center">Créer un nouveau projet abandonné</h1>
+                <input
+                    class="block mt-8 w-full bg-gray-700 border-2 px-4 py-3 focus:outline-none border-gray-700 bg-opacity-20 rounded-md"
+                    name="title"
+                    placeholder="Nom du projet">
+                </input>
+                <textarea
+                    class="block mt-4 w-full bg-gray-700 border-2 h-56 px-4 py-3 focus:outline-none border-gray-700 bg-opacity-20 rounded-md"
+                    name="description"
+                    placeholder="Description du projet"
+                ></textarea>
+                <input
+                        class="block mt-4 w-full bg-gray-700 border-2 px-4 py-3 focus:outline-none border-gray-700 bg-opacity-20 rounded-md"
+                        name="totalHours"
+                        placeholder="Nombre d'heures passées sur le projet">
+                </input>
+            </div>
+            <div>
+                <div class="mt-10 bg-gray-800 p-10 rounded-xl text-white shadow-2xl">
+                    <h1 class="font-black text-xl text-center">Créer un nouveau projet abandonné</h1>
+                    <div class="bg-gray-700 mt-4 border-gray-700 bg-opacity-20 rounded-md border-2 p-5">
+                        <div class="font-bold text-xl text-center">Icone du projet</div>
+                        <img width="74px" class="cursor-pointer mx-auto mt-4" src="/img/unknown.svg" />
+                    </div>
+                    <div class="bg-gray-700 mt-4 border-gray-700 bg-opacity-20 rounded-md border-2 p-5">
+                        <div class="font-bold text-xl text-center">Contributeurs</div>
+                        <div class="flex flex-wrap">
+                            <img width="44px" class="mt-5 mr-2 rounded-full" src="/img/unknown.svg" />
+                            <input type="file" id="contributors" hidden multiple />
+                            <label for="contributors" class="mt-5 cursor-pointer rounded-full w-11 border-dashed border-2 border-gray-50 flex justify-center items-center">+</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gray-800 mt-8 p-10 rounded-xl text-white shadow-2xl">
+                    <button type="submit" class="block w-full mx-auto bg-purple-700 transition ease-in-out duration-200 hover:bg-purple-500 transform hover:-translate-y-1 py-4 rounded-md text-white font-medium focus:outline-none">Créer mon projet abandonné</button>
+                </div>
+            </div>
+        </div>
+    </form>
+    <footer class="py-4 mt-4 text-white font-bold text-md text-center">
+        Made with ❤️ by <a href="https://en-zo.dev">Enzo</a> & <a href="https://briqueaubob.dev">Bob</a>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
