--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,36 @@
 body {
     overflow-x: hidden;
 }
+
+input[type="radio"] {
+    display: none;
+}
+
+input[type="radio"] + label {
+    color: #333;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+}
+
+input[type="radio"] + label span {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin: -1px 4px 0 0;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 2px solid #FFFFFF;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+    text-align: center;
+    line-height: 44px;
+}
+
+input[type=radio] + label span img {
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+
+input[type=radio]:checked + label span img {
+    opacity: 1;
+}
