--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
         <section id="projects" class="container px-4 mx-auto mt-64">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
                 {{#each projects}}
-                    <div class="bg-gradient-to-br from-blue-500 to-blue-700 p-8 rounded-md justify-between shadow-xl">
+                    <div class="bg-gradient-to-br from-{{this.color}}-500 to-{{this.color}}-700 p-8 rounded-md justify-between shadow-xl">
                     <div>
                         <div class="flex items-center font-bold text-white text-2xl">
                             {{#if this.logo}}
@@ -49,7 +49,7 @@
             <button onClick="window.location.reload()" class="block mx-auto bg-purple-700 transition ease-in-out duration-200 hover:bg-purple-500 transform hover:-translate-y-1 py-4 px-5 rounded-md text-white font-medium focus:outline-none">Voir d'autres projets</button>
         </section>
         <footer class="py-4 mt-4 text-white font-bold text-md text-center">
-            Made with ❤️ by <a href="https://en-zo.dev">Enzo</a> & <a href="https://briqueaubob.dev">Bob</a>
+            Made with by <a href="https://en-zo.dev">Enzo</a> & <a href="https://briqueaubob.dev">Bob</a>
         </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
