--- a/views/new.hbs
+++ b/views/new.hbs
@@ -30,6 +30,20 @@
                     name="totalHours"
                     placeholder="Nombre d'heures passées sur le projet">
                 </input>
+                <div class="relative mt-4">
+                    <input type="radio" name="color" value="red" checked>
+                    <label for="color">
+                        <span>
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/242518/check-icn.svg" alt="Checked Icon" />
+                        </span>
+                    </label>
+                    <input type="radio" name="color" value="orange">
+                    <label for="color">
+                        <span>
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/242518/check-icn.svg" alt="Checked Icon" />
+                        </span>
+                    </label>
+                </div>
             </div>
             <div>
                 <div class="mt-10 bg-gray-800 p-10 rounded-xl text-white shadow-2xl">
