--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,13 +2,13 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <title>App</title>
+        <title>Projets Abandonnés</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
-        <link href="/css/tailwind.css" rel="stylesheet"/>
+        <link href="/css/tailwind.min.css" rel="stylesheet"/>
         <link href="/css/style.css" rel="stylesheet"/>
     </head>
-    <body class="bg-gray-900">
+    <body class="bg-gray-900 overflow-x-hidden">
         <img class="fixed select-none top-0 -z-1" src="/img/waves.svg" alt=""/>
         <section class="text-center animation-rocket">
             <h1 id="head-text" class="font-black py-4 mt-24 text-8xl text-white flex flex-col">
@@ -22,34 +22,34 @@
         <section id="projects" class="container px-4 mx-auto mt-64">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-12">
                 {{#each projects}}
-                    <div class="bg-gradient-to-br from-{{this.color}}-500 to-{{this.color}}-700 p-8 rounded-md justify-between shadow-xl">
-                    <div>
-                        <div class="flex items-center font-bold text-white text-2xl">
-                            {{#if this.logo}}
-                                <img class="w-24 rounded-full mr-6" src="/uploads/{{ this.logo }}" />
-                            {{/if}}
-                            {{ this.title }}
+                    <div class="bg-gradient-to-br from-{{this.color}}-500 to-{{this.color}}-700 p-8 rounded-md flex flex-col justify-between shadow-xl">
+                        <div>
+                            <div class="flex items-center font-bold text-white text-2xl">
+                                {{#if this.logo}}
+                                    <img class="w-24 rounded-full mr-6" src="/uploads/{{ this.logo }}" />
+                                {{/if}}
+                                {{ this.title }}
+                            </div>
+                            <p class="text-md mt-3 text-white">{{ this.description }}</p>
                         </div>
-                        <p class="text-md mt-3 text-white">{{ this.description }}</p>
+                        <div class="flex justify-between mt-4">
+                            <div class="flex items-center text-white text-md font-regular">
+                                <img class="mr-2" src="/img/clock.svg" />
+                                {{ this.totalHours }}h
+                            </div>
+                            <div class="flex">
+                                {{#each this.contributors}}
+                                    <img class="w-8 transform translate-x-2 rounded-full ml-1" src="/uploads/{{ this }}" />
+                                {{/each}}
+                            </div>
+                        </div>
                     </div>
-                    <div class="flex justify-between mt-4">
-                        <div class="flex items-center text-white text-md font-regular">
-                            <img class="mr-2" src="/img/clock.svg" />
-                            {{ this.totalHours }}h
-                        </div>
-                        <div class="flex">
-                            {{#each this.contributors}}
-                                <img class="w-8 transform translate-x-2 rounded-full ml-1" src="/uploads/{{ this }}" />
-                            {{/each}}
-                        </div>
-                    </div>
-                </div>
                 {{/each}}
             </div>
             <button onClick="window.location.reload()" class="block mx-auto bg-purple-700 transition ease-in-out duration-200 hover:bg-purple-500 transform hover:-translate-y-1 py-4 px-5 rounded-md text-white font-medium focus:outline-none">Voir d'autres projets</button>
         </section>
         <footer class="py-4 mt-4 text-white font-bold text-md text-center">
-            Made with by <a href="https://en-zo.dev">Enzo</a> & <a href="https://briqueaubob.dev">Bob</a>
+            Made with ❤️ by <a href="https://en-zo.dev">Enzo</a> & <a href="https://briqueaubob.dev">Bob</a>
         </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
