--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Projets Abandonnés</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link href="/css/tailwind.min.css" rel="stylesheet"/>
     </head>
